--- a/.github/workflows/armvirt.yml
+++ b/.github/workflows/armvirt.yml
@@ -24,6 +24,10 @@ jobs:
       
       - name: Load custom configuration
         run: |
+          echo -n 'd4a7d36962bb6218ebd94bf040ac560e' > vermagic
+          sed -i '/mkhash md5/s/^/#/; /mkhash md5/a \	cp $(TOPDIR)/vermagic $(LINUX_DIR)/.vermagic' include/kernel-defaults.mk
+          sed -i '/STAMP_BUILT/s/^/#/; /STAMP_BUILT/a \  STAMP_BUILT:=$(STAMP_BUILT)_$(shell cat $(LINUX_DIR)/.vermagic)' package/kernel/linux/Makefile
+          
           cp -f ${CONFIG_FILE} openwrt/.config
           cp -f ${PATCH_FILE} openwrt/package/kernel/linux/modules/
           
