--- a/config-openwrt/v21.02.5/armvirt64.config
+++ b/config-openwrt/v21.02.5/armvirt64.config
@@ -1,7 +1,21 @@
 # Targets
-CONFIG_TARGET_armvirt=y
-CONFIG_TARGET_armvirt_64=y
-CONFIG_TARGET_armvirt_64_Default=y
+# CONFIG_TARGET_armvirt=y
+# CONFIG_TARGET_armvirt_64=y
+# CONFIG_TARGET_armvirt_64_Default=y
+
+CONFIG_TARGET_mediatek=y
+CONFIG_TARGET_mediatek_mt7629=y
+CONFIG_TARGET_mediatek_mt7629_DEVICE_mediatek_mt7629-rfb=y
+CONFIG_HAS_SUBTARGETS=y
+CONFIG_HAS_DEVICES=y
+CONFIG_TARGET_BOARD="mediatek"
+CONFIG_TARGET_SUBTARGET="mt7629"
+CONFIG_TARGET_PROFILE="DEVICE_mediatek_mt7629-rfb"
+CONFIG_TARGET_ARCH_PACKAGES="arm_cortex-a7"
+CONFIG_CPU_TYPE="cortex-a7"
+CONFIG_arm=y
+CONFIG_arm_v7=y
+CONFIG_ARCH="arm"
 
 # Package
 CONFIG_PACKAGE_kmod-inet-diag=m
