--- a/.github/workflows/mediatek-mt7629.yml
+++ b/.github/workflows/mediatek-mt7629.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Load custom configuration
         run: |
           echo -n 'd4a7d36962bb6218ebd94bf040ac560e' > openwrt/vermagic
-          sed -i '/mkhash md5/s/^/#/; /mkhash md5/a \	cp $(TOPDIR)/vermagic $(LINUX_DIR)/.vermagic' openwrt/include/kernel-defaults.mk
+          sed -i '/mkhash md5/s/^/#/; /mkhash md5/a \\tcp $(TOPDIR)/vermagic $(LINUX_DIR)/.vermagic' openwrt/include/kernel-defaults.mk
           sed -i '/STAMP_BUILT/s/^/#/; /STAMP_BUILT/a \  STAMP_BUILT:=$(STAMP_BUILT)_$(shell cat $(LINUX_DIR)/.vermagic)' openwrt/package/kernel/linux/Makefile
           
           cp -f ${CONFIG_FILE} openwrt/.config
